Fixed no transition on iPhone

--- a/client/templates/_layout/default_overlay.less
+++ b/client/templates/_layout/default_overlay.less
@@ -22,6 +22,8 @@
     opacity: 0;
 
     transition: all 250ms ease-in-out;
+    -webkit-transition: all 250ms ease-in-out;
+
     z-index: -1;
 
     background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.98) 0%, rgba(240, 240, 255, 0.96) 100%);
@@ -47,6 +49,13 @@
     transition-timing-function: cubic-bezier(0.175, 0.885, 0.335, 1.05);
     transition-delay: initial;
     backface-visibility: hidden;
+
+    -webkit-transform: scale3d(1, 1, 1);
+    -webkit-transition: all 400ms cubic-bezier(0.175, 0.885, 0.335, 1.05);
+    -webkit-transition-property: all;
+    -webkit-transition-duration: 400ms;
+    -webkit-transition-timing-function: cubic-bezier(0.175, 0.885, 0.335, 1.05);
+    -webkit-transition-delay: initial;
   }
 }
 
@@ -81,6 +90,13 @@
     transition-duration: 1200ms;
     transition-timing-function: cubic-bezier(0.175, 0.885, 0.335, 1.05);
     transition-delay: initial;
+
+    -webkit-transform: scale3d(0.85, 0.85, 1);
+    -webkit-transition: all 1200ms cubic-bezier(0.175, 0.885, 0.335, 1.05);
+    -webkit-transition-property: all;
+    -webkit-transition-duration: 1200ms;
+    -webkit-transition-timing-function: cubic-bezier(0.175, 0.885, 0.335, 1.05);
+    -webkit-transition-delay: initial;
   }
 }
 
